--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,10 @@
     "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "web-vitals": "^0.2.4"
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
